--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   email: anxingle820@gmail.com
   link:  anxingle.github.io
   weibo: http://weibo.com/2459205691/profile?topnav=1&wvr=6
-  github: github.com/anxingle
+  github: http://github.com/anxingle
   music: http://music.163.com/#/user/home?id=57312747
   linkedin: 
 
