--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ author:
   name: anxingle
   email: anxingle820@gmail.com
   link:  anxingle.github.io
-  weibo: http://weibo.com/2459205691/profile?topnav=1&wvr=6
-  github: http://github.com/anxingle
-  music: http://music.163.com/#/user/home?id=57312747
+  weibo: https://weibo.com/2459205691/profile?topnav=1&wvr=6
+  github: https://github.com/anxingle
+  music: https://music.163.com/#/user/home?id=57312747
   linkedin: 
 
 # 站点信息
@@ -25,7 +25,7 @@ favicon: /public/img/me/horse.png
 # google analytics 设置
 ga:
   id:  
-  url: http://anxingle.github.io/
+  url: https://anxingle.github.io/
 
 # disqus 设置  评论框-留言模块
 disqus:
